--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <script defer src="assets/js/mouse.js"></script>
+  <script defer src="assets/js/writter.js"></script>
 
 </head>
 
@@ -17,23 +18,28 @@
   <div class="menu">
     <div class="top left">
       <a class="main-link" href="#">Stijn van der Pouw </a>
+      <p class="intro-title"> &nbsp <span class="txt-type" data-wait="2600"
+          data-words='["Developer", "UX-Designer", "Eager to learn more...", "Photographer", "Consultant"]'></span>
+      </p>
     </div>
 
     <div class="top right">
-      <a class="main-link" href="#">Contact </a>
-      <a href="#">Coffee </a>
-      <a href="#">Call </a>
+      <a class="main-link" href="mailto://info@stijnvanderpouw.com">Contact </a>
+      <a href="https://wa.me/0031612622238">Coffee </a>
+      <a href="tel:0031612622238">Call </a>
     </div>
 
+    <img id="peacock" src="assets/peacock.svg">
+
     <div class="bottom left">
-      <a href="#">People </a>
-      <a href="#">Design </a>
+      <a href="https">People </a>
+      <a href="#">Developement </a>
       <a class="main-link" href="#">Skills </a>
     </div>
 
     <div class="bottom right">
+      <a href="#">Web</a>
       <a href="#">Consultant</a>
-      <a href="#">Developer</a>
       <a class="main-link" href="#">Projects </a>
     </div>
   </div>
