--- a/index.html
+++ b/index.html
@@ -10,41 +10,40 @@
 
   <script defer src="assets/js/mouse.js"></script>
   <script defer src="assets/js/writter.js"></script>
+  <script defer src="assets/js/colorSetter.js"></script>
 
 </head>
 
 <body>
 
-  <div class="menu">
-    <div class="top left">
-      <a class="main-link" href="#">Stijn van der Pouw </a>
-      <p class="intro-title"> &nbsp <span class="txt-type" data-wait="2600"
-          data-words='["Developer", "UX-Designer", "Eager to learn more...", "Photographer", "Consultant"]'></span>
-      </p>
-    </div>
-
-    <div class="top right">
-      <a class="main-link" href="mailto://info@stijnvanderpouw.com">Contact </a>
-      <a href="https://wa.me/0031612622238">Coffee </a>
-      <a href="tel:0031612622238">Call </a>
-    </div>
-
-    <img id="peacock" src="assets/peacock.svg">
-
-    <div class="bottom left">
-      <a href="https">People </a>
-      <a href="#">Developement </a>
-      <a class="main-link" href="#">Skills </a>
-    </div>
-
-    <div class="bottom right">
-      <a href="#">Web</a>
-      <a href="#">Consultant</a>
-      <a class="main-link" href="#">Projects </a>
-    </div>
-  </div>
+  <img id="peacock" src="assets/peacock.svg">
 
   <div id="mouse-div"></div>
+
+  <div class="top left menu-item">
+    <a class="main-item" href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank">Stijn van der Pouw </a>
+    <p class="intro-title"> &nbsp <span class="txt-type" data-wait="2600"
+        data-words='["Developer", "UX-Designer", "Eager to learn more...", "Photographer", "Consultant"]'></span>
+    </p>
+  </div>
+
+  <div class="bottom left menu-item">
+    <a href="#">People </a>
+    <a href="#">Developement </a>
+    <a class="main-item" href="#">Skills </a>
+  </div>
+
+  <div class="bottom right menu-item">
+    <a href="#">Web</a>
+    <a href="#">Consultant</a>
+    <a class="main-item" href="#">Projects </a>
+  </div>
+
+  <div class="top right menu-item">
+    <a class="main-item" href="mailto://info@stijnvanderpouw.com">Contact </a>
+    <a href="https://wa.me/+31612622238" target="_blank">Coffee </a>
+    <a href="tel:0031612622238">Call </a>
+  </div>
 
 </body>
 
