--- a/index.html
+++ b/index.html
@@ -21,28 +21,28 @@
   <div id="mouse-div"></div>
 
   <div class="top left menu-item">
-    <a class="main-item" href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank">Stijn van der Pouw </a>
+    <div class="main-item">Stijn van der Pouw </div>
     <p class="intro-title"> &nbsp <span class="txt-type" data-wait="2600"
         data-words='["Developer", "UX-Designer", "Eager to learn more...", "Photographer", "Consultant"]'></span>
     </p>
   </div>
 
   <div class="bottom left menu-item">
-    <a href="#">People </a>
-    <a href="#">Developement </a>
-    <a class="main-item" href="#">Skills </a>
+    <a href="/skills.html#people">People </a>
+    <a href="/skills.html#technical">Technical </a>
+    <a class="main-item" href="/skills.html">Skills </a>
   </div>
 
   <div class="bottom right menu-item">
-    <a href="#">Web</a>
-    <a href="#">Consultant</a>
-    <a class="main-item" href="#">Projects </a>
+    <a href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank">Consultant</a>
+    <a href="https://github.com/Svan-derp?tab=overview" target="_blank">Designed&Developed</a>
+    <a class="main-item" href="/projects.html">Projects </a>
   </div>
 
   <div class="top right menu-item">
     <a class="main-item" href="mailto://info@stijnvanderpouw.com">Contact </a>
-    <a href="https://wa.me/+31612622238" target="_blank">Coffee </a>
-    <a href="tel:0031612622238">Call </a>
+    <a href="https://wa.me/+31612622238" target="_blank">for coffee </a>
+    <a href="tel:0031612622238">or call </a>
   </div>
 
 </body>
