--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
 
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <!--favicons  -->
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
+  <link rel="manifest" href="assets/site.webmanifest">
 
+  <!-- js -->
   <script defer src="assets/js/mouse.js"></script>
   <script defer src="assets/js/writter.js"></script>
   <script defer src="assets/js/colorSetter.js"></script>
