--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <body>
 
-  <img id="peacock" src="assets/peacock.svg">
+  <img id="peacock" src="assets/images/peacock.svg">
 
   <div id="mouse-div"></div>
 
