--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Stijn van der Pouw</title>
 
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/index.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!--favicons  -->
