with mobile view

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         data-words='["Developer", "UX-Designer", "Eager to learn more...", "Photographer", "Consultant"]'></span>
     </p>
   </div>
+  
+    <div class="bottom right menu-item">
+      <a href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank">Consultant</a>
+      <a href="https://github.com/Svan-derp?tab=overview" target="_blank">Development</a>
+      <a class="main-item" href="/projects.html">Projects </a>
+    </div>
 
   <div class="bottom left menu-item">
     <a href="/skills.html#people">People </a>
@@ -41,16 +47,9 @@
     <a class="main-item" href="/skills.html">Skills </a>
   </div>
 
-  <div class="bottom right menu-item">
-    <a href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank">Consultant</a>
-    <a href="https://github.com/Svan-derp?tab=overview" target="_blank">Designed&Developed</a>
-    <a class="main-item" href="/projects.html">Projects </a>
-  </div>
-
   <div class="top right menu-item">
     <a class="main-item" href="mailto://info@stijnvanderpouw.com">Contact </a>
-    <a href="https://wa.me/+31612622238" target="_blank">for coffee </a>
-    <a href="tel:0031612622238">or call </a>
+    <a href="tel:0031612622238">Call me </a>
   </div>
 
 </body>
