--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Stijn van der Pouw</title>
+  <title>Stijn van der Pouw | Digitalisation & Automation </title>
+  <meta name="description" content="Automate and optimize processes. Embrace data-driven decision-making. Encourage collaboration among team members, to streamline workflows.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
   <link rel="stylesheet" type="text/css" href="assets/css/index.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!--favicons  -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
