renaming and moved

--- a/index.html
+++ b/index.html
@@ -1,61 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Stijn van der Pouw | Digitalisation & Automation</title>
+    <meta
+      name="description"
+      content="Automate and optimize processes. Embrace data-driven decision-making. Encourage collaboration among team members, to streamline workflows. Stay open to emerging technologies to stay ahead of the curve."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <title>Stijn van der Pouw | Digitalisation & Automation </title>
-  <meta name="description" content="Automate and optimize processes. Embrace data-driven decision-making. Encourage collaboration among team members, to streamline workflows.">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/index.css" />
 
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/index.css">
-  
-  <!--favicons  -->
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon-16x16.png">
-  <link rel="manifest" href="assets/site.webmanifest">
+    <!--favicons  -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/images/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/site.webmanifest" />
 
-  <!-- js -->
-  <script defer src="assets/js/mouse.js"></script>
-  <script defer src="assets/js/writter.js"></script>
-  <script defer src="assets/js/colorSetter.js"></script>
+    <!-- js -->
+    <script defer src="assets/js/index.js"></script>
+    <script defer src="assets/js/typeWritter.js"></script>
+  </head>
 
-</head>
+  <body>
+    <img id="peacock" src="assets/images/peacock.svg" />
 
-<body>
+    <div id="mouse-div"></div>
 
-  <img id="peacock" src="assets/images/peacock.svg">
+    <div class="top left menu-item">
+      <div class="main-item">Stijn van der Pouw</div>
+      <p class="intro-title">
+        &nbsp
+        <span
+          class="txt-type"
+          data-wait="2600"
+          data-words='[ "Automate and optimize processes.", "Embrace data-driven decision-making.", "Encourage collaboration among team members.", "Implement continuous improvement practices.", "Stay open to emerging technologies to stay ahead of the curve."]'
+        ></span>
+      </p>
+    </div>
 
-  <div id="mouse-div"></div>
-
-  <div class="top left menu-item">
-    <div class="main-item">Stijn van der Pouw </div>
-    <p class="intro-title"> &nbsp <span class="txt-type" data-wait="2600"
-        data-words='["Developer", "UX-Designer", "Eager to learn more...", "Photographer", "Consultant"]'></span>
-    </p>
-  </div>
-  
     <div class="bottom right menu-item">
-      <a href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank">Consultant</a>
-      <a href="https://github.com/Svan-derp?tab=overview" target="_blank">Development</a>
+      <a href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank"
+        >Consultant</a
+      >
+      <a href="https://github.com/Svan-derp?tab=overview" target="_blank"
+        >Development</a
+      >
       <a class="main-item" href="/projects.html">Projects </a>
     </div>
 
-  <div class="bottom left menu-item">
-    <a href="/skills.html#people">People </a>
-    <a href="/skills.html#technical">Technical </a>
-    <a class="main-item" href="/skills.html">Skills </a>
-  </div>
+    <div class="bottom left menu-item">
+      <a href="/skills.html#people">People </a>
+      <a href="/skills.html#technical">Technical </a>
+      <a class="main-item" href="/skills.html">Skills </a>
+    </div>
 
-  <div class="top right menu-item">
-    <a class="main-item" href="mailto://info@stijnvanderpouw.com">Contact </a>
-    <a href="tel:0031612622238">Call me </a>
-  </div>
-
-</body>
-
-</html>
-</body>
-
+    <div class="top right menu-item">
+      <a class="main-item" href="mailto://info@stijnvanderpouw.com">Contact </a>
+      <a href="tel:0031612622238">Call me </a>
+    </div>
+  </body>
 </html>
