--- a/projects.html
+++ b/projects.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Stijn van der Pouw - Projects</title>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Stijn van der Pouw - Projects</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/projects.css" />
 
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/projects.css">
+    <!--favicons  -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/images/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/site.webmanifest" />
+
+    <!-- js -->
+    <script defer src="assets/js/projects.js"></script>
   </head>
 
   <div class="main-title">
-  <a class="back-link" href="https://stijnvanderpouw.com">
-    go back to homepage
-  </a>
-        Projects
+    <a class="back-link" href="https://stijnvanderpouw.com">
+      go back to homepage
+    </a>
+    Projects
+  </div>
+
+  <div class="project-list">
+    <div class="project-card">
+      <div class="card-title">
+        teste
+        <div class="card-description">afdgsdfsfbk;lsb;lkfjgb;jkl</div>
       </div>
+    </div>
 
-    <div class="project-list">
-      
-      <div class="project-card">
-        <div class="card-title">
-          teste
-          <div class="card-description">
-            afdgsdfsfbk;lsb;lkfjgb;jkl
-          </div>
-        </div>
-      </div>   
-
-      <div class="project-card">
-        <div class="card-title">
-          teste
-          <div class="card-description">
-            afdgsdfsfbk;lsb;lkfjgb;jkl
-          </div>
-        </div>
-      </div>     
-       
-</div>
+    <div class="project-card">
+      <div class="card-title">
+        teste
+        <div class="card-description">afdgsdfsfbk;lsb;lkfjgb;jkl</div>
+      </div>
+    </div>
+  </div>
 </html>
