--- a/projects.html
+++ b/projects.html
@@ -28,29 +28,16 @@
     <link rel="manifest" href="assets/site.webmanifest" />
 
     <!-- js -->
+    <script defer src="assets/js/index.js"></script>
     <script defer src="assets/js/projects.js"></script>
   </head>
 
-  <div class="main-title">
+  <div class="page-title">
     <a class="back-link" href="https://stijnvanderpouw.com">
       go back to homepage
     </a>
     Projects
   </div>
 
-  <div class="project-list">
-    <div class="project-card">
-      <div class="card-title">
-        teste
-        <div class="card-description">afdgsdfsfbk;lsb;lkfjgb;jkl</div>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <div class="card-title">
-        teste
-        <div class="card-description">afdgsdfsfbk;lsb;lkfjgb;jkl</div>
-      </div>
-    </div>
-  </div>
+  <div id="project-list"></div>
 </html>
