--- a/skills.html
+++ b/skills.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>Stijn van der Pouw - Skills</title>
 
-<head>
-  <meta charset="UTF-8">
-  <title>Stijn van der Pouw - Skills</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/skills.css" />
 
-  <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/skills.css">
+    <!--favicons  -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="assets/images/icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="assets/images/icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="assets/images/icons/favicon-16x16.png"
+    />
+    <link rel="manifest" href="assets/site.webmanifest" />
+
+    <!-- js -->
+    <script defer src="assets/js/index.js"></script>
   </head>
 
-<div class="top left menu-item">
-    <div class="main-title"> Skills</div>
+  <div class="page-title" id="technical">
+    <a class="back-link" href="https://stijnvanderpouw.com">
+      go back to homepage
+    </a>
+    Hardskills
+  </div>
 
-</div>
+  <div class="page-title" id="people">Softskills</div>
 </html>
