project added and fixed backlink issue

--- a/projects.html
+++ b/projects.html
@@ -33,7 +33,7 @@
   </head>
 
   <div class="page-title">
-    <a class="back-link" href="https://stijnvanderpouw.com">
+    <a class="back-link" href="/">
       go back to homepage
     </a>
     Projects
