project added and fixed backlink issue

--- a/projects/hboi.html
+++ b/projects/hboi.html
@@ -2,11 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Stijn van der Pouw - Projects</title>
+    <title>Stijn van der Pouw - Skills</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/projects.css" />
-
     <!--favicons  -->
     <link
       rel="apple-touch-icon"
@@ -29,15 +27,12 @@
 
     <!-- js -->
     <script defer src="assets/js/index.js"></script>
-    <script defer src="assets/js/projects.js"></script>
   </head>
 
-  <a class="page-title" href="/">
-  <div class="back-link">
+  <div class="page-title" id="technical">
+    <a class="back-link" href="https://stijnvanderpouw.com">
       go back to homepage
-    </div>
-    Projects
     </a>
-
-  <div id="project-list"></div>
+    Hardskills
+  </div>
 </html>
