--- a/projects/RPI-controler.html
+++ b/projects/RPI-controler.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Stijn van der Pouw - Projects</title>
+    <title>Stijn van der Pouw - Skills</title>
 
     <link rel="stylesheet" type="text/css" href="assets/css/styles.css" />
-    <link rel="stylesheet" type="text/css" href="assets/css/projects.css" />
+    <link rel="stylesheet" type="text/css" href="assets/css/skills.css" />
 
     <!--favicons  -->
     <link
@@ -29,15 +29,14 @@
 
     <!-- js -->
     <script defer src="assets/js/index.js"></script>
-    <script defer src="assets/js/projects.js"></script>
   </head>
 
-  <a class="page-title" href="/">
-  <div class="back-link">
+  <div class="page-title" id="technical">
+    <a class="back-link" href="https://stijnvanderpouw.com">
       go back to homepage
-    </div>
-    Projects
     </a>
+    Hardskills
+  </div>
 
-  <div id="project-list"></div>
+  <div class="page-title" id="people">Softskills</div>
 </html>
