--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Stijn van der Pouw | Digitalisation & Automation</title>
+    <title>Stijn van der Pouw | Digitization & Automation</title>
     <meta
       name="description"
       content="Automate and optimize processes. Embrace data-driven decision-making. Encourage collaboration among team members, to streamline workflows. Stay open to emerging technologies to stay ahead of the curve."
