--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
     <!-- js -->
     <script defer src="assets/js/index.js"></script>
-    <script defer src="assets/js/typeWritter.js"></script>
   </head>
 
   <body>
@@ -42,35 +41,31 @@
 
     <div class="top left menu-item">
       <div class="main-item">Stijn van der Pouw</div>
-      <p class="intro-title">
-        &nbsp
-        <span
-          class="txt-type"
-          data-wait="2600"
-          data-words='[ "Automate and optimize processes.", "Embrace data-driven decision-making.", "Encourage collaboration among team members.", "Implement continuous improvement practices.", "Stay open to emerging technologies to stay ahead of the curve."]'
-        ></span>
-      </p>
+
     </div>
 
     <div class="bottom right menu-item">
-      <a href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank"
-        >Consultant</a
-      >
-      <a href="https://github.com/Svan-derp?tab=overview" target="_blank"
-        >Development</a
-      >
-      <a class="main-item" href="/projects.html">Projects </a>
+      <a href="/profession.html#technical">Technical / </a>
+      <a href="/profession.html#people">People /</a>
+      <a class="main-item" href="/projects.html">Projects /</a>
     </div>
-
+    
     <div class="bottom left menu-item">
-      <a href="/skills.html#technical">Technical </a>
-      <a href="/skills.html#people">People </a>
-      <a class="main-item" href="/skills.html">Skills </a>
+      <a href="https://www.instagram.com/shotbypeacock/" target="_blank"
+        >/ Photograhper</a
+      >     
+      <a href="https://www.linkedin.com/in/stijnvanderpouw/" target="_blank"
+      >/ Consultant</a
+    >
+      <a href="https://github.com/Svan-derp?tab=overview" target="_blank"
+        >/ Developer</a
+      >
+      <a class="main-item" href="/profession.html">/ Profession </a>
     </div>
 
     <div class="top right menu-item">
-      <a class="main-item" href="mailto://info@stijnvanderpouw.com">Contact </a>
-      <a href="tel:0031612622238">Call me </a>
+      <a class="main-item" href="mailto://info@stijnvanderpouw.com">Email /</a>
+      <a href="tel:0031612622238">Phone /</a>
     </div>
   </body>
 </html>
